implemented inss calculation

--- a/config/locales/models/proponent.yml
+++ b/config/locales/models/proponent.yml
@@ -16,3 +16,4 @@ pt-BR:
         personal_phone: Telefone Pessoal
         reference_phone: Telefone de Referência
         salary: Salário
+        inss_discount: Desconto INSS
