--- a/config/locales/models/proponent.yml
+++ b/config/locales/models/proponent.yml
@@ -17,3 +17,7 @@ pt-BR:
         reference_phone: Telefone de Referência
         salary: Salário
         inss_discount: Desconto INSS
+        state_id: Estado
+        city_id: Cidade
+        state: Estado
+        city: Cidade
